[gd_scene load_steps=6 format=3 uid="uid://dpbd6mk8pm80q"]

[ext_resource type="Script" uid="uid://brlmyya3owm17" path="res://Room/Furniture/Monitor/Monitor.gd" id="1_3r6dk"]
[ext_resource type="PackedScene" uid="uid://cpkkkljmrnxvx" path="res://Room/Furniture/Monitor/mesh/new.glb" id="1_g4jwm"]

[sub_resource type="BoxMesh" id="BoxMesh_3r6dk"]
size = Vector3(0.025, 0.025, 0.025)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_3r6dk"]
albedo_color = Color(0.243137, 0.537255, 0.282353, 1)
emission_enabled = true
emission = Color(0.243137, 0.537255, 0.282353, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_6wb4i"]
size = Vector3(0.025, 0.025, 0.025)

[node name="Monitor" type="Node3D"]
script = ExtResource("1_3r6dk")

[node name="new" parent="." instance=ExtResource("1_g4jwm")]

[node name="On_OffButton" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.240747, -0.170556, -0.135789)
mesh = SubResource("BoxMesh_3r6dk")
surface_material_override/0 = SubResource("StandardMaterial3D_3r6dk")

[node name="Area3D" type="Area3D" parent="On_OffButton"]
monitoring = false
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="On_OffButton/Area3D"]
shape = SubResource("BoxShape3D_6wb4i")

[node name="OmniLight3D" type="OmniLight3D" parent="On_OffButton"]
light_color = Color(0.243137, 0.537255, 0.282353, 1)
light_energy = 0.25
shadow_enabled = true

[connection signal="mouse_entered" from="On_OffButton/Area3D" to="." method="_on_area_3d_mouse_entered"]
[connection signal="mouse_exited" from="On_OffButton/Area3D" to="." method="_on_area_3d_mouse_exited"]
